# SSBM-Lectures

.github/workflows/: deploy-slides.yml
AI_use/: README.md  pyproject.toml  requirements.txt
AI_use/notebooks/: bacterium_visualization.ipynb  bayesian_nn_mnist_demo.ipynb  mnist_confidence_demo.ipynb  visualizations.ipynb
AI_use/slides/: README.md  github_pages_setup.md  index.html  part_a.md  part_b.md
AI_use/slides/images/: README.md
