[project]
name = "bayesian-nn-demo"
version = "0.1.0"
description = "Demonstration of Bayesian Neural Networks vs Standard DNNs for MNIST"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tensorflow>=2.15.0",
    "tf-keras>=2.15.0",
    "tensorflow-probability[tf]>=0.23.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "ipykernel>=6.25.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "pillow>=10.0.0",
    "scipy>=1.11.0",
    "pydot>=2.0.0",
    "graphviz>=0.20.1",    
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["*.ipynb", "*.md", "*.sh", "*.txt"]
[tool.uv]
dev-dependencies = [
    "ipywidgets>=8.0.0",
]
